--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,21 +3,27 @@
     <style name="Temas_Dinamicos" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/purple_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="1">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
     
     <style name="DynamicTheme1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/theme1ColorPrimary</item>
-        <item name="colorPrimaryDark">@color/theme1ColorPrimaryDark</item>
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryDark">@color/theme1ColorPrimary</item>
+        <item name="colorOnPrimary">@color/white</item>
+
         <item name="colorSecondary">@color/theme1ColorSecondary</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+
+        <item name="android:statusBarColor" tools:targetApi="1">?attr/colorPrimaryDark</item>
     </style>
 
     <style name="DynamicTheme2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
