--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_200">#0E62B4</color>
+    <color name="purple_500">#0E62B4</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_200">#FFCB1FE8</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="theme1ColorPrimary">#EF6C00</color>
-    <color name="theme1ColorPrimaryDark">#E65100</color>
-    <color name="theme1ColorSecondary">#BD4D02</color>
+    <color name="theme1ColorPrimary">#FFFFEB3B</color>
+    <color name="theme1ColorPrimaryDark">#FFFFEB3B</color>
+    <color name="theme1ColorSecondary">#FFFFEB3B</color>
 
-    <color name="theme2ColorPrimary">#00695C</color>
-    <color name="theme2ColorPrimaryDark">#004D40</color>
-    <color name="theme2ColorSecondary">#0097A7</color>
+    <color name="theme2ColorPrimary">#FF000000</color>
+    <color name="theme2ColorPrimaryDark">#FF000000</color>
+    <color name="theme2ColorSecondary">#FF000000</color>
 
-    <color name="theme3ColorPrimary">#AD1457</color>
-    <color name="theme3ColorPrimaryDark">#880E4F</color>
-    <color name="theme3ColorSecondary">#7986CB</color>
+    <color name="theme3ColorPrimary">#FF07CA00</color>
+    <color name="theme3ColorPrimaryDark">#FF07CA00</color>
+    <color name="theme3ColorSecondary">#FF07CA00</color>
 
-    <color name="theme4ColorPrimary">#1565C0</color>
-    <color name="theme4ColorPrimaryDark">#0D47A1</color>
-    <color name="theme4ColorSecondary">#C62828</color>
+    <color name="theme4ColorPrimary">#D32F2F</color>
+    <color name="theme4ColorPrimaryDark">#D32F2F</color>
+    <color name="theme4ColorSecondary">#D32F2F</color>
 
 
 </resources>
